--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ SESSION_SECRET=ecommerce_session_secret
 
 # Server Port
 PORT=4000
+
+# Email Configuration
+EMAIL_USER=kirellossamy8@gmail.com
+EMAIL_PASSWORD=fiww dems qjlq uvdc
+ADMIN_EMAIL=kirosamy2344@gmail.com
